# mikancita

./: .gitignore  NEXT_STEPS.md  README.md  cat_monitor.py  pyproject.toml  requirements.txt  run_cat_monitor.sh  user_config.json  uv.yml
.devcontainer/: Dockerfile  devcontainer.json
src/: __init__.py  camera.py  config.py  detector.py  evaluator.py  init.py  main.py  mask.py  monitor.py  notifier.py  recorder.py  tracker.py
tests/: test_camera.py  test_evaluator.py  test_notifier.py  test_recorder.py
