[tool.poetry]
name = "video-feed-project"
version = "0.1.0"
description = "A Python project to take video feed and display it in a window."
authors = ["Alice"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.5"
picamera2 = "^0.3.12"
ultralytics = "^8.3.124"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"